Added Header, Content, and Footer to html.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,49 @@
     </head>
     <body>
         <div class="header">
+            <div class="header-menu">
+                Header Logo
+                <ul>
+                  <li><a href="#">Solutions</a></li>
+                  <li><a href="#">FAA & TSA Compliance</a></li>
+                  <li><a href="#">Testimonials</a></li>  
+                </ul>
+            </div>
             <div class="header-text"> 
-                <h1>Airport Web Infrastructure</h1>
-                <b1>Boost airport operational efficiency and visualize trends. Automate up to 90% of tenant interactions with airport staff allowing for quicker response times and operational success.</b1>
+                <h1>Bring Your Airport Into The 21st Century</h1>
+                <b1>Boost airport operational efficiency and visualize trends. Automate up to 90% of tenant interactions with airport staff allowing for quicker response times and operational success. See if a Category III Solutions designed website is right for your airport.</b1>
+                <button>Schedule Consultation</button>
             </div>    
-            <img href="images/runway.jpg">
+            <img src="images/runway.jpg">
+        </div>
+        <div class="content">
+            <div class="services">
+                <div class="fuel">
+                    <img src="placeholder">
+                    <b>Streamlined inspection processes allowing for tenants and operators to coordinate regulatory compliance faster and view record hisory in one easy to access place.</b>
+                </div>
+                <div class="info">
+                    <img src="placeholder">
+                    <b>Disseminate targeted information easily to badge-holders and non-badge holders empowering tenants to make informed decisions</b>
+                </div>
+                <div class="schedule">
+                    <img src="placeholder">
+                    <b>Leveraging smart AI planning tools allows better coordination between airport staff and tenants for joint operations with the added benefit of automated record keeping.</b>
+                </div>
+                <div class="fatigue">
+                    <img src="placeholder">
+                    <b>Reduce airport staff fatigue with reduced paper work, automated record keeping, and easily accessible processed data for better policy making.</b>
+                </div>
+            </div>
+            <div class="Quote">
+                <b>"The Internet is becoming the town square for the global village of tomorrow"</b>
+                <b>-Bill Gates</b>
+            </div>
+        </div>
+        <div class="footer">
+            <b>See what Category III Solutions can do for you</b>
+            <b>Schedule a consultation today</b>
+            <button>Sign Up</button>
         </div>
     </body>
 </html>
