Added classes to stylesheet.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
                   <li><a href="#">Testimonials</a></li>  
                 </ul>
             </div>
-            <div class="header-text"> 
-                <h1>Bring Your Airport Into The 21st Century</h1>
+            <div class="header-text">
+                <div class="ht">
+                    <h1>Bring Your Airport Into The 21st Century</h1>
                 <b1>Boost airport operational efficiency and visualize trends. Automate up to 90% of tenant interactions with airport staff allowing for quicker response times and operational success. See if a Category III Solutions designed website is right for your airport.</b1>
                 <button>Schedule Consultation</button>
+                </div> 
+                <img src="images/runway.jpg">
             </div>    
-            <img src="images/runway.jpg">
+            
         </div>
         <div class="content">
             <div class="services">
