added new divs continued styling

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
     <body>
         <div class="header">
             <div class="header-menu">
-                Header Logo
-                <ul>
-                  <li><a href="#">Solutions</a></li>
-                  <li><a href="#">FAA & TSA Compliance</a></li>
-                  <li><a href="#">Testimonials</a></li>  
-                </ul>
+                <div class="logo">Header Logo</div>
+                <div class="links">
+                  <a href="#">Solutions</a>
+                  <a href="#">FAA & TSA Compliance</a>
+                  <a href="#">Testimonials</a>
+                </div>
             </div>
-            <div class="header-text">
+            <div class="header-content">
                 <div class="ht">
                     <h1>Bring Your Airport Into The 21st Century</h1>
-                <b1>Boost airport operational efficiency and visualize trends. Automate up to 90% of tenant interactions with airport staff allowing for quicker response times and operational success. See if a Category III Solutions designed website is right for your airport.</b1>
-                <button>Schedule Consultation</button>
+                    <b1>Boost airport operational efficiency and visualize trends. Automate up to 90% of tenant interactions with airport staff allowing for quicker response times and operational success. See if a Category III Solutions designed website is right for your airport.</b1>
+                    <button>Schedule Consultation</button>
+                </div>
+                <div class="hi">
+                    <img src="images/runway.jpg">
                 </div> 
-                <img src="images/runway.jpg">
             </div>    
             
         </div>
