--- a/index.html
+++ b/index.html
@@ -29,28 +29,30 @@
             </div>    
             
         </div>
+
         <div class="content">
+            <div class="name">Services</div>
             <div class="services">
                 <div class="fuel">
-                    <img src="placeholder">
+                    <button></button> 
                     <b>Streamlined inspection processes allowing for tenants and operators to coordinate regulatory compliance faster and view record hisory in one easy to access place.</b>
                 </div>
                 <div class="info">
-                    <img src="placeholder">
+                    <button></button> 
                     <b>Disseminate targeted information easily to badge-holders and non-badge holders empowering tenants to make informed decisions</b>
                 </div>
                 <div class="schedule">
-                    <img src="placeholder">
+                    <button></button> 
                     <b>Leveraging smart AI planning tools allows better coordination between airport staff and tenants for joint operations with the added benefit of automated record keeping.</b>
                 </div>
                 <div class="fatigue">
-                    <img src="placeholder">
+                    <button></button> 
                     <b>Reduce airport staff fatigue with reduced paper work, automated record keeping, and easily accessible processed data for better policy making.</b>
                 </div>
             </div>
-            <div class="Quote">
-                <b>"The Internet is becoming the town square for the global village of tomorrow"</b>
-                <b>-Bill Gates</b>
+            <div class="quote">
+                "The Internet is becoming the town square for the global village of tomorrow"
+                <p>-Bill Gates</p>
             </div>
         </div>
         <div class="footer">
