Completed Landing page.

--- a/index.html
+++ b/index.html
@@ -52,13 +52,18 @@
             </div>
             <div class="quote">
                 "The Internet is becoming the town square for the global village of tomorrow"
-                <p>-Bill Gates</p>
+                <div class="quote-p">-Bill Gates</div>
             </div>
         </div>
-        <div class="footer">
+        <div class="ctah">
+        <div class="call-to-action">
             <b>See what Category III Solutions can do for you</b>
             <b>Schedule a consultation today</b>
             <button>Sign Up</button>
+        </div>
+        </div>
+        <div class="footer">
+            Copyright Category III Solutions LLC
         </div>
     </body>
 </html>
